--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="Webfunge" ng-controller="Layout">
 	<head>
 		<title>Webfunge</title>
 		<meta charset="UTF-8"/>
@@ -8,45 +8,35 @@
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
-		<canvas id="renderer" width="64" height="64"></canvas>
+		<div id="canvas"></div>
 		<div id="editor">
-			<textarea id="program">0y2y/12/- 1y3y/12/- 1 8v                            >4y4*SA00@
-                       >5y2P 6y2P 7y2P ++Q 15/-:1f/ wv
-                       |`0-1$z-y9y77                <<
-                       >00y1y4y4*++4/SA0@</textarea>
+			<textarea id="program"></textarea>
 			<form id="controls" class="form-inline">
 				<div class="form-group">
-					<button id="compile" class="btn btn-primary">Compile (Ctrl + Enter)</button>
+					<button id="compile" class="btn btn-primary" ng-click="setCode()">Compile (Ctrl + Enter)</button>
 				</div>
 				<div class="form-group">
-					Load shader:
-					<select class="form-control"></select>
+					<label for="shader">Shader</label>
+					<select class="form-control" id="shader" ng-change="changeShader()" ng-model="shader" ng-options="shader.name for shader in shaders"></select>
 				</div>
 				<div class="form-group">
-					Resolution:
-					<select class="form-control">
-						<option selected>64x64</option>
-					</select>
+					<label for="resolution">Resolution</label>
+					<select class="form-control" id="resolution" ng-change="changeCanvas()" ng-model="options.resolution" ng-options="resolution for resolution in resolutions"></select>
 				</div>
 				<div class="form-group">
-					Threads:
-					<select class="form-control">
-						<option>1</option>
-						<option>2</option>
-						<option>4</option>
-						<option selected>8</option>
-						<option>16</option>
-					</select>
+					<label for="threads">Threads</label>
+					<select class="form-control" id="threads" ng-change="changeCanvas()" ng-model="options.threadCount" ng-options="count for count in threadCounts"></select>
 				</div>
-				<div class="form-group checkbox">
-					<label><input type="checkbox" id="wrap"/> Allow wrap</label>
+				<div class="form-group btn-group" data-toggle="buttons">
+					<label class="btn btn-primary" ng-click="changeWrap()"><input type="checkbox" id="wrap"/> Allow wrap</label>
 				</div>
-				<div class="form-group checkbox">
-					<label><input type="checkbox" id="stat"/> Display stats</label>
+				<div class="form-group btn-group" data-toggle="buttons">
+					<label class="btn btn-primary" ng-click="changeStats()"><input type="checkbox" id="stats"/> Display stats</label>
 				</div>
 			</form>
 		</div>
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.11/angular.min.js"></script>
 		<script src="stats.min.js"></script>
 		<script src="bootstrap.min.js"></script>
 		<script src="script.js"></script>
